fix: the content is aligned relative to the window

--- a/src/theme/DocItem/styles.module.css
+++ b/src/theme/DocItem/styles.module.css
@@ -21,6 +21,10 @@
   padding: 0 0.5rem;
 }
 
+.docItemCol {
+  margin: 0 auto !important;
+}
+
 @media only screen and (min-width: 997px) {
   .docItemCol {
     max-width: 1020px !important;
