--- a/src/theme/TOC/styles.module.css
+++ b/src/theme/TOC/styles.module.css
@@ -12,7 +12,7 @@
   overflow-y: auto;
   position: fixed;
   top: calc(var(--ifm-navbar-height) + 2rem);
-  padding-left: 75px !important;
+  padding-left: 20px !important;
 }
 
 @media only screen and (max-width: 996px) {
